(library
  (name evaluator)
  (public_name sketch.evaluator)
  (libraries 
    js_of_ocaml 
    js_of_ocaml-compiler 
    js_of_ocaml-toplevel 
    reason 
    compiler-libs
  )
  (library_flags -linkall)
  (preprocess (pps js_of_ocaml-ppx))
  (flags :standard -rectypes)
)

(rule
  (targets toplevel.byte)
  (deps (package sketch))
  (action
    (run
      jsoo_mktop -g -package bytes
      -export-package sketch.evaluator
      -jsopt +toplevel.js
      -jsopt +dynlink.js
      -jsopt +nat.js
      -o %{targets}
    )
  )
)

