(library
  (name engine)
  (public_name sketch.engine)
  (libraries 
    js_of_ocaml 
    js_of_ocaml-compiler 
    js_of_ocaml-toplevel 
    reason 
    compiler-libs
  )
  (library_flags -linkall)
  (preprocess (pps js_of_ocaml-ppx))
  (flags :standard -rectypes)
)

(rule
  (targets engine.byte)
  (deps (package sketch))
  (action
    (run
      jsoo_mktop -g -package bytes
      -export-package sketch.engine
      -jsopt +toplevel.js
      -jsopt +dynlink.js
      -jsopt +nat.js
      -o %{targets}
    )
  )
)
