(executable
 (name entry)
 (modes byte)
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries engine)
 (link_flags
  (:standard -linkall)))

(rule
 (targets export.txt)
 (deps entry.bc)
 (action
  (run jsoo_listunits -o %{targets} stdlib)))

(rule
 (targets entry_dev.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --export
   %{dep:export.txt}
   --effects
   cps
   --toplevel
   --pretty
   +toplevel.js
   +dynlink.js
   %{dep:entry.bc}
   -o
   %{targets})))

(rule
 (targets entry.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --export
   %{dep:export.txt}
   --effects
   cps
   --toplevel
   +toplevel.js
   +dynlink.js
   %{dep:entry.bc}
   -o
   %{targets})))

(alias
 (name dev)
 (deps entry_dev.js))

(alias
 (name prod)
 (deps entry.js))
